2005-07-04  Raja R Harinath  <rharinath@novell.com>

	* Makefile.am (EXTRA_DIST): Distribute mono-uninstalled.pc.in.
	(noinst_DATA): Build mono-uninstalled.pc.
	* mono-uninstalled.pc.in (Libs): Avoid ${pc_top_builddir}.
	(Cflags): Likewise.  Let $(srcdir) to be absolute.

2005-07-03  Ben Maurer  <bmaurer@ximian.com>

	* scripts/Makefile.am (bin2_SCRIPTS): Add monop2

2005-07-01  Daniel Drake  <dsd@gentoo.org>

	* configure.in: Add check for FreeBSD's sys/extattr.h

2005-07-01  Raja R Harinath  <rharinath@novell.com>

	Avoid resource leakage on 'make clean' (see #75424).
	* configure.in (AC_CONFIG_FILES): Add runtime/semdel-wrapper.
	* runtime/semdel-wrapper.in: New.
	* runtime/Makefile.am (clean-local): Use the semdel program before
	nuking the .wapi directory.
	(noinst_SCRIPTS): Add semdel-wrapper.
	(MYDISTFILES, distdir): Use automake variable to get the list of
	files to distribute.
	(all-local, install-exec, uninstall): Call semdel-wrapper.
	(mcs-do-test-profiles, mcs-do-run-test-profiles, mcs-compileall):
	Likewise.

2005-06-27  Geoff Norton  <gnorton@customerdna.com>

	* configure.in: Add support for X86 darwin.

2005-06-22  Zoltan Varga  <vargaz@freemail.hu>

	* configure.in: Add support for ia64.

2005-06-20 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* configure.in: enabled the use of mmap/munmap for solaris and linux.
	It seems to help with memory usage.

2005-06-15  Ben Maurer  <bmaurer@ximian.com>

	* configure.in: Another attempt at the portable "find libX11.so"
	Hopefully, this one has no code paths where we are worse off than
	what we had before any of this mess.
	
	* configure.in: What I hope is a more portable version hack.

2005-06-14  Ben Maurer  <bmaurer@ximian.com>

	* configure.in: echo the version number to
	mcs/build/common/MonoVersion.cs. This allows us to not need to
	update AssemblyInfo.cs every time we bump the version number.

	* mono-uninstalled.pc.in: pc file that handles mono when it is not